# cains-jawbone

./: main.py  pyproject.toml  secrets
data/: 1800180799FGBVC-_1_ (1).txt  Cain's Jawbone (slideshow).txt  parsed_for_roam_with_ne.txt
src/: add_ne_to_page.py  bing_search.py  ner.py
src/parse_to_pages/: README.md  parse_to_pages.py
tests/: test_ner.py
upload_to_roam/: parse_to_pages.py
upload_to_roam/data/: 1800180799FGBVC (1).epub  parsed_for_roam.txt
