[tool.poetry]
name = "cains-jawbone"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
EbookLib = "^0.17.1"
nltk = "^3.7"
pytest = "^7.1.2"
spacy = "^3.3.1"
azure-cognitiveservices-search-websearch = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
